--- a/Projeto Pagina de Captura/index.html
+++ b/Projeto Pagina de Captura/index.html
@@ -30,6 +30,14 @@
                 </form>
             </div>
         </section>
+        <footer>
+            <img class="picture" src="Imagens/face.jpg" alt="">
+            <div class="description">
+                <h3>O Palestrante</h3>
+                <p>Carlos Fontana é conhecido por dar palestras que abalam a estrutura do marketing tradicional. Prepare-se para sair do evento com uma nova visão do que é possivel ser feito para o seu negócio decolar.</p>
+                <p>Formado em marketing pela Universidade XYZ e fundador da MarkUp, a empresa vencedora dos ultimos 5 prêmios MarketingBR</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
