--- a/Projeto Pagina de Captura/index.html
+++ b/Projeto Pagina de Captura/index.html
@@ -17,16 +17,18 @@
             <div class="formContainer">
                 <h2 class="mb">GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
                 <p class="mb">Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precidar </p>
-                <form action="post">
-                    <input name="name" id="name" type="text" placeholder="Nome">
-                    <input type="email" name="email" id="email" placeholder="Email">
-                    <select name="place">
+                <form method="post" action="https://gmail.us21.list-manage.com/subscribe/post?u=879b82ba10d72d4473da24c85&amp;id=f8512ccf9f&amp;f_id=009ec2e1f0" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate></form>>
+                    <input name="FNAME" id="name" type="text" placeholder="Nome">
+                    <input type="email" name="EMAIL" id="email" placeholder="Email">
+                    <select name="PLACE">
                         <option value="rj">Rio de Janeiro</option>
                         <option value="sp">São Paulo</option>
                         <option value="mg">Minas Gerais</option>
                         <option value="es">Espirito Santo</option>
                         <input id="button" type="button" value="Inscreva-se Já">
                     </select>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_879b82ba10d72d4473da24c85_f8512ccf9f" tabindex="-1" value=""></div>
                 </form>
             </div>
         </section>
@@ -35,7 +37,7 @@
             <div class="description">
                 <h3>O Palestrante</h3>
                 <p>Carlos Fontana é conhecido por dar palestras que abalam a estrutura do marketing tradicional. Prepare-se para sair do evento com uma nova visão do que é possivel ser feito para o seu negócio decolar.</p>
-                <p>Formado em marketing pela Universidade XYZ e fundador da MarkUp, a empresa vencedora dos ultimos 5 prêmios MarketingBR</p>
+                <p>Formado em marketing pela Universidade XYZ e fundador da MarkUp, a empresa vencedora dos ultimos 5 prêmios</p>
             </div>
         </footer>
     </div>
